resume1/force-app/main/default/objects/Resume__c/fields/Hobbies__c.field-meta.xml
<CustomField>
    <fullName>Hobbies__c</fullName>
    <label>Hobbies</label>
    <type>TextArea</type>
</CustomField>