resume1/force-app/main/default/objects/Resume__c/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <description>LinkedIn</description>
    <label>LinkedIn</label>
    <type>Url</type>
</CustomField>