resume1/force-app/main/default/objects/Resume__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Name of the person</description>
    <inlineHelpText>Name of the person</inlineHelpText>
    <label>Name</label>
    <length>254</length>
    <required>true</required>
    <type>Text</type>
</CustomField>