resume1/force-app/main/default/objects/Resume__c/fields/Profile_Summary_c__c.field-meta.xml
<CustomField>
    <fullName>Profile_Summary_c__c</fullName>
    <label>Profile_Summary__c</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>