resume1/force-app/main/default/objects/Resume__c/fields/Skills_c__c.field-meta.xml
<CustomField>
    <fullName>Skills_c__c</fullName>
    <label>Skills__c</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>Triggers</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>